# viterbi

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  viterbi.py
.github/workflows/: pip.yml
example/: decode.py
